feat(editors): play with some editors strategies

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,19 @@
   },
   "devDependencies": {
     "@playground/babel": "*",
+    "@types/bcryptjs": "2.4.2",
+    "@types/dotenv-safe": "^8.1.0",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/kcors": "^2.2.3",
+    "@types/koa": "^2.11.3",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.4.1",
+    "@types/supertest": "2.0.10",
+    "@types/webpack": "4.39.1",
+    "@types/webpack-node-externals": "1.7.1",
+    "@types/webpack-plugin-serve": "0.10.0",
     "babel-loader": "^8.0.6",
     "reload-server-webpack-plugin": "^1.0.1",
     "webpack": "4.39.1",
