--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,15 +6,21 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
+    "codemirror": "5.56.0",
     "formik": "2.1.4",
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "monaco-editor-webpack-plugin": "1.9.0",
     "notistack": "^0.8.8",
+    "prismjs": "1.20.0",
     "react": "16.13.1",
+    "react-codemirror2": "7.2.1",
     "react-dom": "16.13.1",
     "react-infinite-scroller": "1.2.4",
+    "react-monaco-editor": "0.39.1",
     "react-router-config": "5.1.1",
     "react-router-dom": "5.2.0",
+    "react-simple-code-editor": "0.11.0",
     "rebass": "4.0.7",
     "styled-components": "5.1.1",
     "styled-media-query": "2.1.2",
@@ -27,6 +33,22 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^8.0.1",
     "@testing-library/user-event": "^4.1.0",
+    "@types/dotenv-webpack": "^1.8.0",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/prismjs": "1.16.1",
+    "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
+    "@types/react-infinite-scroller": "1.2.1",
+    "@types/react-router-config": "5.0.1",
+    "@types/react-router-dom": "5.1.5",
+    "@types/rebass": "4.0.6",
+    "@types/styled-components": "5.1.1",
+    "@types/styled-system": "5.1.5",
+    "@types/testing-library__jest-dom": "^5.9.1",
+    "@types/webpack-dev-server": "^3.11.0",
+    "@types/webpack-merge": "4.1.5",
+    "@types/webpack-plugin-serve": "^0.10.0",
+    "@types/yup": "^0.29.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
