--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "node-playground",
   "version": "1.0.0",
   "devDependencies": {
+    "@types/eslint": "6.8.0",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "2.0.2",
+    "@types/stylelint": "9.10.1",
+    "@typescript-eslint/eslint-plugin": "2.19.0",
+    "@typescript-eslint/parser": "2.19.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-okonet": "7.0.2",
@@ -26,13 +32,11 @@
     "lint-staged": "10.2.11",
     "pre-commit": "1.2.2",
     "prettier": "2.0.5",
-    "typescript": "3.9.7",
-    "@typescript-eslint/eslint-plugin": "2.19.0",
-    "@typescript-eslint/parser": "2.19.0",
     "stylelint": "9.2.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.3.1"
+    "stylelint-processor-styled-components": "1.3.1",
+    "typescript": "3.9.7"
   },
   "license": "MIT",
   "lint-staged": {
