--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -17,5 +17,9 @@
     "@babel/preset-react": "7.10.4",
     "@babel/preset-typescript": "7.10.4"
   },
+  "devDependencies": {
+    "@types/babel__core": "7.1.9",
+    "@types/babel__preset-env": "7.9.0"
+  },
   "main": "index.js"
 }
