--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
     "formik": "2.1.4",
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "monaco-editor": "0.20.0",
     "monaco-editor-webpack-plugin": "1.9.0",
     "notistack": "^0.8.8",
     "prismjs": "1.20.0",
@@ -18,6 +19,7 @@
     "react-dom": "16.13.1",
     "react-infinite-scroller": "1.2.4",
     "react-monaco-editor": "0.39.1",
+    "react-resize-detector": "5.2.0",
     "react-router-config": "5.1.1",
     "react-router-dom": "5.2.0",
     "react-simple-code-editor": "0.11.0",
