--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,20 +3,25 @@
   "version": "1.0.0",
   "dependencies": {
     "@babel/polyfill": "7.8.3",
+    "@babel/standalone": "^7.11.6",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
+    "acorn": "^8.0.1",
     "codemirror": "5.56.0",
+    "escodegen": "^2.0.0",
     "formik": "2.1.4",
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "monaco-editor": "0.20.0",
     "monaco-editor-webpack-plugin": "1.9.0",
     "notistack": "^0.8.8",
+    "object-path": "^0.11.4",
     "prismjs": "1.20.0",
     "react": "16.13.1",
     "react-codemirror2": "7.2.1",
     "react-dom": "16.13.1",
+    "react-error-boundary": "^3.0.2",
     "react-infinite-scroller": "1.2.4",
     "react-monaco-editor": "0.39.1",
     "react-resize-detector": "5.2.0",
@@ -27,6 +32,7 @@
     "styled-components": "5.1.1",
     "styled-media-query": "2.1.2",
     "styled-system": "5.1.5",
+    "use-debounce": "^4.0.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
