feat(readme): add readme instructions

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "4.9.1",
     "@material-ui/styles": "4.10.0",
     "acorn": "^8.0.1",
+    "acorn-globals": "^6.0.0",
     "codemirror": "5.56.0",
     "escodegen": "^2.0.0",
     "formik": "2.1.4",
@@ -17,6 +18,7 @@
     "monaco-editor-webpack-plugin": "1.9.0",
     "notistack": "^0.8.8",
     "object-path": "^0.11.4",
+    "pretty-format": "^26.4.2",
     "prismjs": "1.20.0",
     "react": "16.13.1",
     "react-codemirror2": "7.2.1",
